<resources>
    <string name="app_name">PathfinderGame</string>
    <string name="app_name_desc">stands for Pathfinder Android Game</string>
    <string name="start_game">Start Game</string>

    <string name="control_up">Up</string>
    <string name="control_down">Down</string>
    <string name="control_left">Left</string>
    <string name="control_right">Right</string>

    <string name="gameEasy">Easy game</string>
    <string name="gameMedium">Medium game</string>
    <string name="gameHard">Hard game</string>
</resources>
